--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/x-data-grid": "^5.17.21",
+    "@mui/x-date-pickers-pro": "^6.7.0",
     "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/formidable": "^2.0.5",
+    "@types/react-loader-spinner": "^4.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "chart.js": "^3.9.1",
@@ -45,18 +47,22 @@
     "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-edit-list": "^1.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.3",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.2.19",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.4",
     "react-resize-detector": "^7.1.2",
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.4",
     "react-to-print": "^2.14.10",
     "react-toastify": "^9.1.1",
+    "react-use": "^17.4.0",
     "recoil": "^0.7.4",
     "remixicon": "^2.5.0",
     "shuffle-text": "^0.3.6",
@@ -80,11 +86,12 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "json-server": "^0.17.0",
     "sass": "^1.55.0",
     "typescript": "^4.8.4"
   },
   "engines": {
-    "node": ">=16 <17.9"
+    "node": ">=16 >=18.12.1"
   }
 }
