--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-edit-list": "^1.1.0",
