--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "airbnb",
+    "next",
     "next/core-web-vitals",
     "prettier"
   ],
@@ -28,7 +28,6 @@
       ],
       "extends": [
         "plugin:@typescript-eslint/recommended",
-        "airbnb-typescript"
       ],
       "plugins": [
         "@typescript-eslint"
@@ -49,6 +48,9 @@
     "prettier"
   ],
   "rules": {
+    "no-console": "warn",
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off",
     "react/jsx-key": "warn",
     "react/prop-types": "off",
     "react/display-name": "warn",
@@ -56,9 +58,13 @@
     "react/react-in-jsx-scope": "off",
     "no-unused-vars": "warn",
     "no-case-declarations": "warn",
-    "react-hooks/exhaustive-deps": "off",
+    "react-hooks/exhaustive-deps": [
+      "warn",
+      {
+        "additionalHooks": "(useRecoilCallback|useRecoilTransaction_UNSTABLE)"
+      }
+    ],
     "react-hooks/rules-of-hooks": "error",
-    // https://stackoverflow.com/questions/69928061/struggling-with-typescript-react-eslint-and-simple-arrow-functions-components
     "react/function-component-definition": [
       2,
       {
@@ -68,10 +74,7 @@
         ]
       }
     ],
-    // https://github.com/jsx-eslint/eslint-plugin-jsx-a11y/blob/main/docs/rules/anchor-is-valid.md#case-i-use-nextjs-and-im-getting-this-error-inside-of-links
     "jsx-a11y/anchor-is-valid": 0,
-    // airbnb config configures stricter rules, change assert to "either".
-    // https://github.com/jsx-eslint/eslint-plugin-jsx-a11y/issues/718
     "jsx-a11y/label-has-associated-control": [
       2,
       {
