--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build --no-lint",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -16,13 +17,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.11.3",
     "@mui/styled-engine-sc": "^5.11.0",
     "@mui/x-data-grid": "^5.17.21",
     "@popperjs/core": "^2.11.6",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/formidable": "^2.0.5",
+    "@types/recoil": "^0.0.9",
     "apexcharts": "^3.41.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
@@ -32,13 +36,16 @@
     "cookies-next": "^2.1.1",
     "firebase": "^9.15.0",
     "formidable": "^2.1.1",
+    "framer-motion": "^10.16.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "next": "13.0.1",
-    "next-auth": "^4.18.10",
+    "next-auth": "^4.22.3",
+    "next-redux-wrapper": "^8.1.0",
     "nextjs-progressbar": "^0.0.16",
     "rc-input-number": "^7.3.6",
     "react": "^18.2.0",
@@ -51,23 +58,26 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-edit-list": "^1.1.0",
+    "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.3",
     "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.2.19",
+    "react-phone-number-input": "^3.3.2",
     "react-qr-code": "^2.0.11",
-    "react-redux": "^8.0.4",
+    "react-redux": "^8.1.2",
     "react-resize-detector": "^7.1.2",
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.4",
     "react-to-print": "^2.14.10",
     "react-toastify": "^9.1.1",
-    "recoil": "^0.7.4",
+    "recoil": "^0.7.7",
     "remixicon": "^2.5.0",
     "shuffle-text": "^0.3.6",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.8",
     "swiper": "^8.4.6",
-    "swr": "^1.3.0",
+    "swr": "^2.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -76,13 +86,15 @@
     "@types/react-alert": "^7.0.2",
     "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^15.0.0",
     "eslint-config-next": "^12.0.4",
-    "eslint-config-prettier": "^8.9.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "json-server": "^0.17.0",
